==> whitecatboard/Lua-RTOS-ESP32/sys/drivers/platform/esp32/uart.c <==
#include "whitecat.h"
#include <FreeRTOS.h>
#include <queue.h>
#include <stdio.h>
#include <string.h>
#include <stdarg.h>
#include <signal.h>
#include <pthread.h>
#include <sys/drivers/uart.h>
#include <sys/drivers/gpio.h>
#include <sys/drivers/console.h>
#include <sys/drivers/cpu.h>
#include <sys/syslog.h>
#include <sys/status.h>
#include <esp_types.h>
#include "esp_err.h"
#include "esp_intr.h"
#include "xtensa_api.h"
#include "soc/soc.h"
#define UART_FLAG_INIT		(1 << 1)
#define UART_FLAG_IRQ_INIT	(1 << 2)
#define ETS_UART_INUM  5
#define UART_INTR_SOURCE(u) ((u==0)?ETS_UART0_INTR_SOURCE:( (u==1)?ETS_UART1_INTR_SOURCE:((u==2)?ETS_UART2_INTR_SOURCE:0)))

void uart_init(u8_t unit, u32_t brg, u32_t mode, u32_t qs) {
	u8_t rx, tx;
	
    unit--;
	
	// If requestes queue size is greater than current size, delete queue and create
	// a new one
    if (qs > uart[unit].qs) {
		if (uart[unit].q) {
			vQueueDelete(uart[unit].q);
		}
		
		uart[unit].q  = xQueueCreate(qs, sizeof(u8_t));
	}

	uart_pin_config(unit, &rx, &tx);

	//if (!uart0_swaped) {
	//	syslog(LOG_INFO, "%s: at pins rx=%s/tx=%s", names[unit], cpu_pin_name(rx), cpu_pin_name(tx));
	//	syslog(LOG_INFO, "%s: speed %d bauds",names[unit], brg);  
	//}  

	uart_update_params(unit, brg, EIGHT_BITS, NONE_BITS, ONE_STOP_BIT);
	
    uart[unit].brg = brg; 
    uart[unit].qs  = qs; 

    uart[unit].flags |= UART_FLAG_INIT;
}

void uart_init_interrupts(u8_t unit) {
    unit--;

    if (uart[unit].flags & UART_FLAG_IRQ_INIT) {
        return;
    }

    u32_t reg_val = 0;
	u32_t mask = UART_RXFIFO_TOUT_INT_ENA | UART_FRM_ERR_INT_ENA | UART_RXFIFO_FULL_INT_ENA | UART_TXFIFO_EMPTY_INT_ENA;
		
	ESP_INTR_DISABLE(ETS_UART_INUM);

	// Update CONF1 register
    reg_val = READ_PERI_REG(UART_CONF1_REG(unit)) & ~((UART_RX_FLOW_THRHD << UART_RX_FLOW_THRHD_S) | UART_RX_FLOW_EN) ;

    reg_val |= ((mask & UART_RXFIFO_TOUT_INT_ENA) ?
                (((2 & UART_RX_TOUT_THRHD) << UART_RX_TOUT_THRHD_S) | UART_RX_TOUT_EN) : 0);

    reg_val |= ((mask & UART_RXFIFO_FULL_INT_ENA) ?
                ((10 & UART_RXFIFO_FULL_THRHD) << UART_RXFIFO_FULL_THRHD_S) : 0);

    reg_val |= ((mask & UART_TXFIFO_EMPTY_INT_ENA) ?
                ((20 & UART_TXFIFO_EMPTY_THRHD) << UART_TXFIFO_EMPTY_THRHD_S) : 0);

    WRITE_PERI_REG(UART_CONF1_REG(unit), reg_val);

	// Update INT_ENA register
    WRITE_PERI_REG(UART_INT_ENA_REG(unit), mask);
	

	intr_matrix_set(xPortGetCoreID(), UART_INTR_SOURCE(unit), ETS_UART_INUM);
	xt_set_interrupt_handler(ETS_UART_INUM, uart_rx_intr_handler, NULL);
	ESP_INTR_ENABLE(ETS_UART_INUM);
	
		//syslog(LOG_INFO, "%s: interrupts %d/%d/%d",names[unit].name,
        //      uart[unit].irqs.rx,uart[unit].irqs.tx,uart[unit].irqs.er);
}

void uart_write(u8_t unit, char byte) {
    unit--;
	 
    while (((READ_PERI_REG(UART_STATUS_REG(unit)) & (UART_TXFIFO_CNT << UART_TXFIFO_CNT_S)) >> UART_TXFIFO_CNT_S & UART_TXFIFO_CNT) >= 126);
    WRITE_PERI_REG(UART_FIFO_REG(unit), byte);
}

void uart_writes(u8_t unit, char *s) {
    unit--;

    while (*s) {
	    while (((READ_PERI_REG(UART_STATUS_REG(unit)) & (UART_TXFIFO_CNT << UART_TXFIFO_CNT_S)) >> UART_TXFIFO_CNT_S & UART_TXFIFO_CNT) >= 126);
	    WRITE_PERI_REG(UART_FIFO_REG(unit) , *s++);
   }
}
